fix(mm): fix iframe styling (UFTABI-4929) (#2664)
* fix(mm): fix iframe styling (UFTABI-4929)

* fix(mm): prevent stepper overlap

* fix(mm): stepper looking good in all scenarios

* fix(mm): stepper really looking good in all scenarios

--- a/apps/mm/src/app/core/components/pages-stepper/pages-stepper.component.scss
+++ b/apps/mm/src/app/core/components/pages-stepper/pages-stepper.component.scss
@@ -25,15 +25,15 @@
 }
 
 ::ng-deep .mat-horizontal-stepper-header-container {
-  :first-child {
+  mat-step-header {
     @apply pl-4;
+  }
 
-    mat-icon {
-      @apply pl-0;
-    }
+  .mat-stepper-horizontal-line {
+    @apply -ml-4 -mr-1;
   }
 
   :last-child {
-    @apply pr-4;
+    @apply pr-0;
   }
 }
